# notebook

./: .gitmodules  Schedule.md  find100mb.py  readme.md
Schedule/: CompetitionArrangements.md  DayilyNote.md  StudyPlan20240226.md  VacationPlan0112.md
Scripts/: FindThan50M.py  cake.py  cam.py  data_matplot2.ipynb  data_matplot3.ipynb  detectPavement.py  diff.py  drone_data.py  kalman.py  nameisaqwa.py  nameiscable.py  other.md  quaternion.py  receiveHsv.py  recordVideo.py  shuiyin.py  test.ipynb  test.py
Scripts/DefectDetection/: detect.ipynb  detect.py  detect2.ipynb
Scripts/mmw_serial/cpp/: CMakeLists.txt  serial_communication.cpp
Scripts/mmw_serial_c++/: CMakeLists.txt  mmw.cpp  mmw_serial.cpp
Scripts/mmw_serial_py/: mmw_serial.py
Scripts/test/: a.out  test.cpp
Scripts/tww_data/: data_matplot_final.ipynb
Scripts/tww_data/deprecated/: fanzhengshuju.py  graph.ipynb  handleExcel.py  mlp_data.ipynb  nameisaqwa_0922.py
common/: Quaternions.md
common/EmbeddedDevelopment/05 文件IO/: note.md
common/EmbeddedDevelopment/06 并发程序设计/: note.md
common/FrontEnd/: note.md
common/Grammar/C++/: markers_landpad_det.cpp  note.md
common/Guidance/: EAITutorial.md  GitTutorial.md  Latex.md  Office.md  UbuntuTutorial.md  VscodeTutorial.md  WinTutorial.md
common/KalmanFilter/: kal.m  note.md
common/Matlab/: tutorial.md
common/MatrixTheory/: MatrixTheory.md
common/PID/: note.md
common/PX4/: P450.md  Pixhawk_note.md  Prometheus.md  note.md
common/Paper/: note.md
common/Qt/: note.md
matlab/fault_diagnosis/: classical_signal.mlx
(+203 files in other folders)
